Ajuste no relatório de perca 2

--- a/templates/relatorio_financeiro_com_perda.html
+++ b/templates/relatorio_financeiro_com_perda.html
@@ -203,7 +203,7 @@
         </table>
     </div>
 
-    <!-- Consolidação – Parte 1 -->
+    <!-- Consolidação – Parte 1 
     <div class="table-responsive mt-5">
         <h4 class="text-center text-dark">
             Consolidação - Energia ({{ "%02d"|format(mes_inicio) }}/{{ ano_inicio }} até {{ "%02d"|format(mes_fim) }}/{{ ano_fim }})
@@ -241,7 +241,7 @@
                 {% endfor %}
             </tbody>
         </table>
-    </div>
+    </div>-->
 
     <!-- Consolidação – Parte 2 -->
     <div class="table-responsive mt-4">
