--- a/templates/relatorio_cliente.html
+++ b/templates/relatorio_cliente.html
@@ -53,7 +53,7 @@
                     <th>Usina</th>
                     <th class="text-end">kWh/mês Injetado</th>
                     <th class="text-end">kWh/mês Consumido</th>
-                    <th class="text-end">Média 6M (kWh/mês)</th>  {# NOVA COLUNA #}
+                    <th class="text-end">Média 6M (kWh/mês)</th>
                     <th class="text-end">Diferença Injetado/ Consumo (kWh)</th>
                     <th class="text-end">Diferença Injetado/ Consumo (%)</th>
                     <th class="text-end">Economia (R$)</th>
